Fix design issues on mobile with Algolia search

--- a/styles/index.css
+++ b/styles/index.css
@@ -23,6 +23,12 @@
   margin-top: -20px;
 }
 
+/* Fix Algolia mobile-searchbox design issues */
+
+.ais-SearchBox-submit {
+	width: 60px;
+}
+
 .ais-SearchBox-submitIcon {
   margin-left: 100px;
   /* Override default CSS to make the icon a little larger */
